--- a/clase_QU1R30N/clase_QU1R30N.csproj
+++ b/clase_QU1R30N/clase_QU1R30N.csproj
@@ -65,6 +65,7 @@
     <Compile Include="sin_internet\sin_formularios\modelos\_1_modelo_compras.cs" />
     <Compile Include="sin_internet\sin_formularios\modelos\_4_modelo_empleados.cs" />
     <Compile Include="sin_internet\sin_formularios\modelos\_3_modelo_inventario.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_6_modelo_provedores.cs" />
     <Compile Include="sin_internet\sin_formularios\principal.cs" />
     <Compile Include="sin_internet\sin_formularios\procesos\_2_proceso_ventas.cs" />
     <Compile Include="sin_internet\sin_formularios\procesos\_3_procesos_inventario.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="sin_internet\sin_formularios\procesos\_0_proceso_AnalisisDeDatos.cs" />
     <Compile Include="sin_internet\sin_formularios\procesos\_1_proceso_compras.cs" />
     <Compile Include="sin_internet\sin_formularios\procesos\_4_proceso_aprendices_empleados.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_6_proceso_provedores.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
