--- a/clase_QU1R30N/clase_QU1R30N.csproj
+++ b/clase_QU1R30N/clase_QU1R30N.csproj
@@ -64,12 +64,12 @@
     <Compile Include="sin_internet\sin_formularios\modelos\_0_modelo_AnalisisDeDatos.cs" />
     <Compile Include="sin_internet\sin_formularios\modelos\_1_modelo_compras.cs" />
     <Compile Include="sin_internet\sin_formularios\modelos\_4_modelo_empleados.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_3_modelo_inventario.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_3_modelo_productos_e_inventario.cs" />
     <Compile Include="sin_internet\sin_formularios\modelos\_6_modelo_provedores.cs" />
     <Compile Include="sin_internet\sin_formularios\modelos\_7_modelo_sucursales.cs" />
     <Compile Include="sin_internet\sin_formularios\principal.cs" />
     <Compile Include="sin_internet\sin_formularios\procesos\_2_proceso_ventas.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_3_procesos_inventario.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_3_procesos_productos_e_inventario.cs" />
     <Compile Include="sin_internet\sin_formularios\procesos\_5_proceso_afiliados.cs" />
     <Compile Include="sin_internet\sin_formularios\procesos\_0_proceso_AnalisisDeDatos.cs" />
     <Compile Include="sin_internet\sin_formularios\procesos\_1_proceso_compras.cs" />
