--- a/clase_QU1R30N/clase_QU1R30N.csproj
+++ b/clase_QU1R30N/clase_QU1R30N.csproj
@@ -54,6 +54,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sin_internet\con_formularios\herramientas_para_elementos_del_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sin_internet\con_formularios\herramientas_para_elementos_del_form.Designer.cs">
+      <DependentUpon>herramientas_para_elementos_del_form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="sin_internet\con_formularios\tienda\ventas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sin_internet\con_formularios\tienda\ventas.Designer.cs">
+      <DependentUpon>ventas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="sin_internet\con_formularios\Ventana_emergente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sin_internet\con_formularios\Ventana_emergente.Designer.cs">
+      <DependentUpon>Ventana_emergente.cs</DependentUpon>
+    </Compile>
     <Compile Include="sin_internet\sin_formularios\herramientas\iniciar_archivos.cs" />
     <Compile Include="sin_internet\sin_formularios\herramientas\operaciones_arreglos.cs" />
     <Compile Include="sin_internet\sin_formularios\herramientas\operaciones_textos.cs" />
@@ -91,6 +109,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="sin_internet\con_formularios\herramientas_para_elementos_del_form.resx">
+      <DependentUpon>herramientas_para_elementos_del_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sin_internet\con_formularios\tienda\ventas.resx">
+      <DependentUpon>ventas.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -106,7 +130,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="con_internet\" />
-    <Folder Include="sin_internet\con_formularios\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
