--- a/clase_QU1R30N/clase_QU1R30N.csproj
+++ b/clase_QU1R30N/clase_QU1R30N.csproj
@@ -66,6 +66,12 @@
     <Compile Include="sin_internet\con_formularios\tienda\compras.Designer.cs">
       <DependentUpon>compras.cs</DependentUpon>
     </Compile>
+    <Compile Include="sin_internet\con_formularios\tienda\inventario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sin_internet\con_formularios\tienda\inventario.Designer.cs">
+      <DependentUpon>inventario.cs</DependentUpon>
+    </Compile>
     <Compile Include="sin_internet\con_formularios\tienda\ventas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +85,7 @@
       <DependentUpon>Ventana_emergente.cs</DependentUpon>
     </Compile>
     <Compile Include="sin_internet\sin_formularios\herramientas\iniciar_archivos.cs" />
+    <Compile Include="sin_internet\sin_formularios\herramientas\operaciones_archivos.cs" />
     <Compile Include="sin_internet\sin_formularios\herramientas\operaciones_arreglos.cs" />
     <Compile Include="sin_internet\sin_formularios\herramientas\operaciones_textos.cs" />
     <Compile Include="sin_internet\sin_formularios\herramientas\Tex_base.cs" />
@@ -122,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="sin_internet\con_formularios\tienda\compras.resx">
       <DependentUpon>compras.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sin_internet\con_formularios\tienda\inventario.resx">
+      <DependentUpon>inventario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sin_internet\con_formularios\tienda\ventas.resx">
       <DependentUpon>ventas.cs</DependentUpon>
