--- a/clase_QU1R30N/clase_QU1R30N.csproj
+++ b/clase_QU1R30N/clase_QU1R30N.csproj
@@ -93,27 +93,29 @@
     <Compile Include="sin_internet\sin_formularios\herramientas\Tex_base.cs" />
     <Compile Include="sin_internet\sin_formularios\herramientas\var_fun_GG.cs" />
     <Compile Include="sin_internet\sin_formularios\herramientas\var_fun_GG_dir_arch_crear.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_2_modelo_ventas.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_5_modelo_afiliados.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_0_modelo_AnalisisDeDatos.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_1_modelo_compras.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_4_modelo_aprendices_E.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_3_modelo_productos_e_inventario.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_6_modelo_provedores.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_7_modelo_sucursales.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_8_modelo_registros.cs" />
-    <Compile Include="sin_internet\sin_formularios\modelos\_9_modelo_funciones_diversas.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_10_modelo_mul.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_02_modelo_ventas.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_05_modelo_afiliados.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_00_modelo_AnalisisDeDatos.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_01_modelo_compras.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_04_modelo_aprendices_E.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_03_modelo_productos_e_inventario.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_06_modelo_provedores.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_07_modelo_sucursales.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_08_modelo_registros.cs" />
+    <Compile Include="sin_internet\sin_formularios\modelos\_09_modelo_funciones_diversas.cs" />
     <Compile Include="sin_internet\sin_formularios\principal.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_2_proceso_ventas.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_3_proceso_productos_e_inventario.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_5_proceso_afiliados.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_0_proceso_AnalisisDeDatos.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_1_proceso_compras.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_4_proceso_aprendices_E.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_6_proceso_provedores.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_7_proceso_sucursales.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_8_proceso_registros.cs" />
-    <Compile Include="sin_internet\sin_formularios\procesos\_9_proceso_funciones_diversas.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_02_proceso_ventas.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_03_proceso_productos_e_inventario.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_05_proceso_afiliados.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_00_proceso_AnalisisDeDatos.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_01_proceso_compras.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_04_proceso_aprendices_E.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_06_proceso_provedores.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_07_proceso_sucursales.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_08_proceso_registros.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_09_proceso_funciones_diversas.cs" />
+    <Compile Include="sin_internet\sin_formularios\procesos\_10_proceso_mul.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
